--- a/Identification.ipynb
+++ b/Identification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,41 +17,55 @@
     "from torch.utils.data import Dataset, DataLoader\n",
     "import torch.utils.model_zoo as model_zoo\n",
     "import torch.optim as optim\n",
-    "import torch.nn as nn\n",
-    "from config import *"
+    "import torch.nn as nn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath = \"data/maestro-v3.0.0_modify.csv\"\n",
-    "data = pd.read_csv(filepath)\n",
-    "# Subset for  composer identification\n",
-    "counts = data[\"canonical_composer\"].value_counts()\n",
-    "selected_composers = counts[counts >= 5].index #24\n",
-    "selected_composers = np.asarray(selected_composers)\n",
-    "selection = pd.DataFrame(columns=data.columns)\n",
-    "for i in selected_composers:\n",
-    "    choices = data[data[\"canonical_composer\"] == i].head()\n",
-    "    selection = pd.concat([selection, choices], ignore_index=True)\n",
-    "selection.to_csv(\"composer_selection.csv\")\n",
-    "# Subset for performer identificaion\n",
-    "counts = data[\"performer\"].value_counts()\n",
-    "selected_performers = counts[counts >= 10].index #24\n",
-    "selected_performers = np.asarray(selected_performers)\n",
-    "selection = pd.DataFrame(columns=data.columns)\n",
-    "for i in selected_performers:\n",
-    "    choices = data[data[\"performer\"] == i].head(10)\n",
-    "    selection = pd.concat([selection, choices], ignore_index=True)\n",
-    "selection.to_csv(\"performer_selection.csv\")"
+    "SAVEPATH = \"save/\"\n",
+    "SPLIT_RATE = 0.9\n",
+    "BATCH_SIZE = 20\n",
+    "\n",
+    "SAVE_EVERY = 50\n",
+    "DEV_EVERY = 50\n",
+    "LOG_EVERY = 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# filepath = \"data/maestro-v3.0.0_modify.csv\"\n",
+    "# data = pd.read_csv(filepath)\n",
+    "# # Subset for  composer identification\n",
+    "# counts = data[\"canonical_composer\"].value_counts()\n",
+    "# selected_composers = counts[counts >= 5].index #24\n",
+    "# selected_composers = np.asarray(selected_composers)\n",
+    "# selection = pd.DataFrame(columns=data.columns)\n",
+    "# for i in selected_composers:\n",
+    "#     choices = data[data[\"canonical_composer\"] == i].head()\n",
+    "#     selection = pd.concat([selection, choices], ignore_index=True)\n",
+    "# selection.to_csv(\"composer_selection.csv\")\n",
+    "# # Subset for performer identificaion\n",
+    "# counts = data[\"performer\"].value_counts()\n",
+    "# selected_performers = counts[counts >= 10].index #24\n",
+    "# selected_performers = np.asarray(selected_performers)\n",
+    "# selection = pd.DataFrame(columns=data.columns)\n",
+    "# for i in selected_performers:\n",
+    "#     choices = data[data[\"performer\"] == i].head(10)\n",
+    "#     selection = pd.concat([selection, choices], ignore_index=True)\n",
+    "# selection.to_csv(\"performer_selection.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +136,7 @@
     "\n",
     "class Resnet(nn.Module):\n",
     "    # 224*224\n",
-    "    def __init__(self, block, num_layer, n_classes=1000, input_channels=16):\n",
+    "    def __init__(self, block, num_layer, n_classes=24, input_channels=16, name=\"resnet18\"):\n",
     "        super(Resnet, self).__init__()\n",
     "        self.in_channels = 64\n",
     "        self.conv1 = nn.Conv2d(input_channels, 64, kernel_size=7, stride=2, padding=3, bias=False)\n",
@@ -133,8 +147,9 @@
     "        self.layer2 = self._make_layer(block, 128, num_layer[1], 2)\n",
     "        self.layer3 = self._make_layer(block, 256, num_layer[2], 2)\n",
     "        self.layer4 = self._make_layer(block, 512, num_layer[3], 2)\n",
-    "        self.avgpool = nn.AvgPool2d(kernel_size=7, stride=1)\n",
-    "        self.fc = nn.Linear(block.expansion*512, n_classes)\n",
+    "        self.avgpool = nn.AvgPool2d(kernel_size=2, stride=1)\n",
+    "        self.fc = nn.Linear(9*512, n_classes)\n",
+    "        self.name = name\n",
     "\n",
     "        for m in self.modules():\n",
     "            if isinstance(m, nn.Conv2d):\n",
@@ -170,9 +185,14 @@
     "        x = self.layer4(x)\n",
     "        \n",
     "        x = self.avgpool(x)\n",
+    "#         print(x.shape)\n",
     "        x = x.view(x.size(0), -1)\n",
+    "#         print(x.shape)\n",
     "        x = self.fc(x)\n",
     "        return x\n",
+    "    \n",
+    "    def _class_name(self):\n",
+    "        return self.name\n",
     "\n",
     "\n",
     "def resnet18(pretrained=False, **kwargs):\n",
@@ -193,7 +213,7 @@
     "    Args:\n",
     "        pretrained (bool): If True, returns a model pre-trained on ImageNet\n",
     "    \"\"\"\n",
-    "    model = Resnet(BasicBlock, [3, 4, 6, 3], **kwargs)\n",
+    "    model = Resnet(BasicBlock, [3, 4, 6, 3], name=\"resnet34\", **kwargs)\n",
     "    if pretrained:\n",
     "        model.load_state_dict(model_zoo.load_url(model_urls['resnet34']))\n",
     "    return model\n",
@@ -205,7 +225,7 @@
     "    Args:\n",
     "        pretrained (bool): If True, returns a model pre-trained on ImageNet\n",
     "    \"\"\"\n",
-    "    model = Resnet(BottleNeck, [3, 4, 6, 3], **kwargs)\n",
+    "    model = Resnet(BottleNeck, [3, 4, 6, 3], name=\"resnet50\", **kwargs)\n",
     "    if pretrained:\n",
     "        # model.load_state_dict(model_zoo.load_url(model_urls['resnet50']))\n",
     "        model_path = './initmodel/resnet50_v2.pth'\n",
@@ -218,7 +238,7 @@
     "    Args:\n",
     "        pretrained (bool): If True, returns a model pre-trained on ImageNet\n",
     "    \"\"\"\n",
-    "    model = Resnet(BottleNeck, [3, 4, 23, 3], **kwargs)\n",
+    "    model = Resnet(BottleNeck, [3, 4, 23, 3], name=\"resnet101\", **kwargs)\n",
     "    if pretrained:\n",
     "        # model.load_state_dict(model_zoo.load_url(model_urls['resnet101']))\n",
     "        model_path = './initmodel/resnet101_v2.pth'\n",
@@ -231,7 +251,7 @@
     "    Args:\n",
     "        pretrained (bool): If True, returns a model pre-trained on ImageNet\n",
     "    \"\"\"\n",
-    "    model = Resnet(BottleNeck, [3, 8, 36, 3], **kwargs)\n",
+    "    model = Resnet(BottleNeck, [3, 8, 36, 3], name=\"resnet152\", **kwargs)\n",
     "    if pretrained:\n",
     "        # model.load_state_dict(model_zoo.load_url(model_urls['resnet152']))\n",
     "        model_path = './initmodel/resnet152_v2.pth'\n",
@@ -241,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,8 +300,8 @@
     "    \n",
     "    best_dev_acc = -1; best_snapshot_path = ''\n",
     "    header = '  Time Epoch Iteration Progress    (%Epoch)   Loss   Dev/Loss     Accuracy  Dev/Accuracy'\n",
-    "    dev_log_template = ' '.join('{:>6.0f},{:>5.0f},{:>9.0f},{:>5.0f}/{:<5.0f} {:>7.1f}%,{:>7.4f},{:8.4f},{:12.4f},{:12.4f}'.split(','))\n",
-    "    log_template = ' '.join('{:>6.0f},{:>5.0f},{:>9.0f},{:>5.0f}/{:<5.0f} {:>7.1f}%,{:>7.4f},{},{:12.4f},{}'.split(','))\n",
+    "    dev_log_template = ' '.join('{:>6.0f},{:>5.0f},{:>9.0f},{:>5.0f}/{:<5.0f} {:>7.1f}%,{:>7.4f},{:8.4f},{:12.4f}%,{:12.4f}%'.split(','))\n",
+    "    log_template = ' '.join('{:>6.0f},{:>5.0f},{:>9.0f},{:>5.0f}/{:<5.0f} {:>7.1f}%,{:>7.4f},{},{:12.4f}%,{}'.split(','))\n",
     "    \n",
     "    if os.path.isdir(save_path) == False:\n",
     "        os.makedirs(save_path)\n",
@@ -303,11 +323,12 @@
     "            optimizer.zero_grad()\n",
     "\n",
     "            # forward + backward + optimize\n",
-    "            outputs = net(inputs.float()) # torch.Size([32, 6])\n",
-    "            labels = labels.view(-1) - 1  # torch.Size([32, 1])\n",
+    "            outputs = net(inputs.float()) \n",
     "            \n",
     "            total += labels.size(0)\n",
+    "            labels = labels.argmax(dim=1)\n",
     "            correct += (outputs.argmax(dim=1) == labels).sum().item()\n",
+    "            \n",
     "            \n",
     "            loss = criterion(outputs, labels) \n",
     "            loss.backward()\n",
@@ -329,9 +350,9 @@
     "                        signals, labels = dev_batch\n",
     "                        signals = signals.to(device)\n",
     "                        labels = labels.to(device)\n",
-    "                        labels = labels.view(-1) - 1\n",
     "                        \n",
     "                        predicts = net(signals.float())\n",
+    "                        labels = labels.argmax(dim=1)\n",
     "                        dev_loss = criterion(predicts, labels)\n",
     "                        dev_correct += (torch.max(predicts, 1)[1].view(-1) == labels).sum().item()\n",
     "                        dev_total += labels.size(0)\n",
@@ -401,9 +422,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using GPU for training\n",
+      "\n",
+      "----------------------------- EXPERIMENT -----------------------------\n",
+      "  Time Epoch Iteration Progress    (%Epoch)   Loss   Dev/Loss     Accuracy  Dev/Accuracy\n",
+      "     2     1        10     5/5       100.0%  4.1602                6.2500%             \n",
+      "     4     3        20     5/5       100.0%  4.2205                4.1667%             \n",
+      "     6     5        30     5/5       100.0%  3.6631               11.4583%             \n",
+      "     7     7        40     5/5       100.0%  3.6587               13.5417%             \n",
+      "    11     9        50     5/5       100.0%  2.9037   5.1652      33.3333%       0.0000%\n",
+      "    14    11        60     5/5       100.0%  1.9842               35.4167%             \n",
+      "    16    13        70     5/5       100.0%  1.5100               43.7500%             \n",
+      "    17    15        80     5/5       100.0%  1.3816               44.7917%             \n",
+      "    19    17        90     5/5       100.0%  1.9780               48.9583%             \n",
+      "    22    19       100     5/5       100.0%  2.6042   7.5950      64.5833%       8.3333%\n",
+      "    25    21       110     5/5       100.0%  1.0480               70.8333%             \n",
+      "    27    23       120     5/5       100.0%  1.0247               73.9583%             \n",
+      "    29    25       130     5/5       100.0%  0.8563               81.2500%             \n",
+      "    31    27       140     5/5       100.0%  1.5135               85.4167%             \n",
+      "    34    29       150     5/5       100.0%  1.5235   9.2756      86.4583%       0.0000%\n",
+      "    36    31       160     5/5       100.0%  1.1400               81.2500%             \n",
+      "    38    33       170     5/5       100.0%  0.6518               82.2917%             \n",
+      "    40    35       180     5/5       100.0%  0.4648               94.7917%             \n",
+      "    42    37       190     5/5       100.0%  0.2755               92.7083%             \n",
+      "    45    39       200     5/5       100.0%  0.1627   9.9111      96.8750%       0.0000%\n",
+      "    47    41       210     5/5       100.0%  0.2532               94.7917%             \n",
+      "    49    43       220     5/5       100.0%  0.4252               93.7500%             \n",
+      "    50    45       230     5/5       100.0%  0.1787               92.7083%             \n",
+      "    52    47       240     5/5       100.0%  0.0574               93.7500%             \n",
+      "    55    49       250     5/5       100.0%  0.0332   9.5605      98.9583%       0.0000%\n",
+      "Finished Training\n"
+     ]
+    }
+   ],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    if torch.cuda.is_available():\n",
@@ -414,19 +472,87 @@
     "        device = torch.device('cpu')\n",
     "\n",
     "    print('\\n----------------------------- EXPERIMENT -----------------------------')\n",
-    "    net = resnet50().to(device)\n",
-    "    print(net)\n",
+    "    net = resnet34().to(device)\n",
     "    optimizer = optim.Adam(net.parameters(), lr=0.001, weight_decay=0.001)\n",
     "    criterion = nn.CrossEntropyLoss()\n",
     "    net, fp = train(optimizer, criterion, net, device, 50)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 2, 3, 3, 3, 3, 4, 4, 4, 4, 4, 4, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5]"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = np.load(\"y_train.npy\")\n",
+    "sorted(pd.DataFrame(y.argmax(axis=1)).value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  0,   1,   2],\n",
+       "       [  5,   6,   7],\n",
+       "       [ 10,  11,  12],\n",
+       "       [ 15,  16,  17],\n",
+       "       [ 20,  21,  22],\n",
+       "       [ 25,  26,  27],\n",
+       "       [ 30,  31,  32],\n",
+       "       [ 35,  36,  37],\n",
+       "       [ 40,  41,  42],\n",
+       "       [ 45,  46,  47],\n",
+       "       [ 50,  51,  52],\n",
+       "       [ 55,  56,  57],\n",
+       "       [ 60,  61,  62],\n",
+       "       [ 65,  66,  67],\n",
+       "       [ 70,  71,  72],\n",
+       "       [ 75,  76,  77],\n",
+       "       [ 80,  81,  82],\n",
+       "       [ 85,  86,  87],\n",
+       "       [ 90,  91,  92],\n",
+       "       [ 95,  96,  97],\n",
+       "       [100, 101, 102],\n",
+       "       [105, 106, 107],\n",
+       "       [110, 111, 112],\n",
+       "       [115, 116, 117]])"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python deeplearning",
+   "display_name": "ospi",
    "language": "python",
-   "name": "deeplearning"
+   "name": "ospi"
   },
   "language_info": {
    "codemirror_mode": {
@@ -438,7 +564,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
