--- a/Identification.ipynb
+++ b/Identification.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,9 +30,9 @@
     "SPLIT_RATE = 0.9\n",
     "BATCH_SIZE = 20\n",
     "\n",
-    "SAVE_EVERY = 50\n",
-    "DEV_EVERY = 50\n",
-    "LOG_EVERY = 10"
+    "SAVE_EVERY = 8\n",
+    "DEV_EVERY = 8\n",
+    "LOG_EVERY = 4"
    ]
   },
   {
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
     "\n",
     "def checkpoint(net, save_path, acc, loss, iterations):\n",
     "    snapshot_prefix = os.path.join(save_path, 'snapshot_' + net._class_name())\n",
-    "    snapshot_path = snapshot_prefix + '_acc_{:.2f}_loss_{:.4f}_iter_{}_model.pt'.format(acc, loss.item(), iterations)\n",
+    "    snapshot_path = snapshot_prefix + '_acc_{:.2f}_loss_{:.4f}_iter_{}_model.pt'.format(acc, loss, iterations)\n",
     "    torch.save(net, snapshot_path)\n",
     "    for f in glob.glob(snapshot_prefix + '*'):\n",
     "        if f != snapshot_path:\n",
@@ -311,7 +311,7 @@
     "    dev_loader = data_loader(np.load(\"X_val.npy\"), np.load(\"y_val.npy\"))\n",
     "\n",
     "    for epoch in range(epoches):  # loop over the dataset multiple times\n",
-    "        correct, total = 0, 0\n",
+    "        correct, total, print_loss, n= 0, 0, 0, 0\n",
     "        for i, data in enumerate(train_loader, 0):\n",
     "            iterations += 1\n",
     "            # get the inputs\n",
@@ -330,7 +330,8 @@
     "            correct += (outputs.argmax(dim=1) == labels).sum().item()\n",
     "            \n",
     "            \n",
-    "            loss = criterion(outputs, labels) \n",
+    "            loss = criterion(outputs, labels)\n",
+    "            print_loss += loss.item()\n",
     "            loss.backward()\n",
     "            optimizer.step()  \n",
     "        \n",
@@ -339,12 +340,12 @@
     "        \n",
     "            # checkpoint model periodically\n",
     "            if iterations % SAVE_EVERY == 0:\n",
-    "                checkpoint(net, save_path, acc, loss, iterations)\n",
+    "                checkpoint(net, save_path, acc, print_loss/n, iterations)\n",
     "            \n",
     "            # validation model periodically\n",
     "            if iterations % DEV_EVERY == 0:\n",
     "                # calculate accuracy on validation set\n",
-    "                dev_correct, dev_total = 0, 0\n",
+    "                dev_correct, dev_total, dev_loss , m = 0, 0, 0, 0\n",
     "                with torch.no_grad():\n",
     "                    for dev_batch_idx, dev_batch in enumerate(dev_loader, 0):\n",
     "                        signals, labels = dev_batch\n",
@@ -353,14 +354,15 @@
     "                        \n",
     "                        predicts = net(signals.float())\n",
     "                        labels = labels.argmax(dim=1)\n",
-    "                        dev_loss = criterion(predicts, labels)\n",
+    "                        dev_loss += criterion(predicts, labels).item()\n",
     "                        dev_correct += (torch.max(predicts, 1)[1].view(-1) == labels).sum().item()\n",
     "                        dev_total += labels.size(0)\n",
+    "                        m += 1\n",
     "                dev_acc = 100. * dev_correct / dev_total\n",
     "\n",
     "                print(dev_log_template.format(time.time()-start,\n",
     "                    epoch, iterations, 1+i, len(train_loader),\n",
-    "                    100. * (1+i) / len(train_loader), loss.item(), dev_loss.item(), acc, dev_acc))\n",
+    "                    100. * (1+i) / len(train_loader), print_loss/n, dev_loss/m, acc, dev_acc))\n",
     "\n",
     "                # update best valiation set accuracy\n",
     "                if dev_acc > best_dev_acc:\n",
@@ -369,7 +371,7 @@
     "\n",
     "                    best_dev_acc = dev_acc\n",
     "                    snapshot_prefix = os.path.join(save_path, 'best_snapshot_' + net._class_name())\n",
-    "                    best_snapshot_path = snapshot_prefix + '_devacc_{:.2f}_devloss_{:.4f}__iter_{}_model.pt'.format(dev_acc, dev_loss.item(), iterations)\n",
+    "                    best_snapshot_path = snapshot_prefix + '_devacc_{:.2f}_devloss_{:.4f}__iter_{}_model.pt'.format(dev_acc, dev_loss/m, iterations)\n",
     "\n",
     "                    # save model, delete previous 'best_snapshot' files\n",
     "                    torch.save(net, best_snapshot_path)\n",
@@ -381,8 +383,8 @@
     "                # print progress message\n",
     "                print(log_template.format(time.time()-start,\n",
     "                    epoch, iterations, 1+i, len(train_loader),\n",
-    "                    100. * (1+i) / len(train_loader), loss.item(), ' '*8, acc, ' '*12))\n",
-    "\n",
+    "                    100. * (1+i) / len(train_loader), print_loss/n, ' '*8, acc, ' '*12))\n",
+    "            n += 1\n",
     "    print('Finished Training')\n",
     "    return net, best_snapshot_path\n",
     "\n",
@@ -422,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -433,31 +435,56 @@
       "\n",
       "----------------------------- EXPERIMENT -----------------------------\n",
       "  Time Epoch Iteration Progress    (%Epoch)   Loss   Dev/Loss     Accuracy  Dev/Accuracy\n",
-      "     2     1        10     5/5       100.0%  4.1602                6.2500%             \n",
-      "     4     3        20     5/5       100.0%  4.2205                4.1667%             \n",
-      "     6     5        30     5/5       100.0%  3.6631               11.4583%             \n",
-      "     7     7        40     5/5       100.0%  3.6587               13.5417%             \n",
-      "    11     9        50     5/5       100.0%  2.9037   5.1652      33.3333%       0.0000%\n",
-      "    14    11        60     5/5       100.0%  1.9842               35.4167%             \n",
-      "    16    13        70     5/5       100.0%  1.5100               43.7500%             \n",
-      "    17    15        80     5/5       100.0%  1.3816               44.7917%             \n",
-      "    19    17        90     5/5       100.0%  1.9780               48.9583%             \n",
-      "    22    19       100     5/5       100.0%  2.6042   7.5950      64.5833%       8.3333%\n",
-      "    25    21       110     5/5       100.0%  1.0480               70.8333%             \n",
-      "    27    23       120     5/5       100.0%  1.0247               73.9583%             \n",
-      "    29    25       130     5/5       100.0%  0.8563               81.2500%             \n",
-      "    31    27       140     5/5       100.0%  1.5135               85.4167%             \n",
-      "    34    29       150     5/5       100.0%  1.5235   9.2756      86.4583%       0.0000%\n",
-      "    36    31       160     5/5       100.0%  1.1400               81.2500%             \n",
-      "    38    33       170     5/5       100.0%  0.6518               82.2917%             \n",
-      "    40    35       180     5/5       100.0%  0.4648               94.7917%             \n",
-      "    42    37       190     5/5       100.0%  0.2755               92.7083%             \n",
-      "    45    39       200     5/5       100.0%  0.1627   9.9111      96.8750%       0.0000%\n",
-      "    47    41       210     5/5       100.0%  0.2532               94.7917%             \n",
-      "    49    43       220     5/5       100.0%  0.4252               93.7500%             \n",
-      "    50    45       230     5/5       100.0%  0.1787               92.7083%             \n",
-      "    52    47       240     5/5       100.0%  0.0574               93.7500%             \n",
-      "    55    49       250     5/5       100.0%  0.0332   9.5605      98.9583%       0.0000%\n",
+      "     1     0         4     4/4       100.0%  9.4170                2.7778%             \n",
+      "     3     1         8     4/4       100.0%  6.8752   3.6328       2.7778%       4.3478%\n",
+      "     5     2        12     4/4       100.0%  5.4583                2.7778%             \n",
+      "     8     3        16     4/4       100.0%  4.3355   4.0349      11.1111%       4.3478%\n",
+      "     9     4        20     4/4       100.0%  4.3579                9.7222%             \n",
+      "    12     5        24     4/4       100.0%  4.7051   5.2820       9.7222%       4.3478%\n",
+      "    12     6        28     4/4       100.0%  4.2466               16.6667%             \n",
+      "    15     7        32     4/4       100.0%  3.9408   5.9665      16.6667%       4.3478%\n",
+      "    16     8        36     4/4       100.0%  3.4165               33.3333%             \n",
+      "    18     9        40     4/4       100.0%  3.2345   5.8780      34.7222%       4.3478%\n",
+      "    19    10        44     4/4       100.0%  3.0300               44.4444%             \n",
+      "    22    11        48     4/4       100.0%  2.6560   5.6793      48.6111%       4.3478%\n",
+      "    23    12        52     4/4       100.0%  2.4539               58.3333%             \n",
+      "    25    13        56     4/4       100.0%  1.8609   6.2722      69.4444%       4.3478%\n",
+      "    26    14        60     4/4       100.0%  1.9752               62.5000%             \n",
+      "    29    15        64     4/4       100.0%  1.6583   7.1576      62.5000%       0.0000%\n",
+      "    30    16        68     4/4       100.0%  1.0777               79.1667%             \n",
+      "    32    17        72     4/4       100.0%  1.2070   7.3115      79.1667%       0.0000%\n",
+      "    33    18        76     4/4       100.0%  1.4776               75.0000%             \n",
+      "    36    19        80     4/4       100.0%  1.0750   5.5361      76.3889%       4.3478%\n",
+      "    37    20        84     4/4       100.0%  1.6367               68.0556%             \n",
+      "    40    21        88     4/4       100.0%  0.8390   7.1260      80.5556%      13.0435%\n",
+      "    42    22        92     4/4       100.0%  1.1629               79.1667%             \n",
+      "    44    23        96     4/4       100.0%  1.1236   5.6683      81.9444%       0.0000%\n",
+      "    45    24       100     4/4       100.0%  0.7972               83.3333%             \n",
+      "    48    25       104     4/4       100.0%  1.3102   7.4763      70.8333%      13.0435%\n",
+      "    48    26       108     4/4       100.0%  0.7022               83.3333%             \n",
+      "    51    27       112     4/4       100.0%  0.3278   7.7941      97.2222%      13.0435%\n",
+      "    52    28       116     4/4       100.0%  0.2140               94.4444%             \n",
+      "    54    29       120     4/4       100.0%  0.2687   7.3001      95.8333%      13.0435%\n",
+      "    55    30       124     4/4       100.0%  0.2292               95.8333%             \n",
+      "    57    31       128     4/4       100.0%  0.1828   5.8673      94.4444%       4.3478%\n",
+      "    58    32       132     4/4       100.0%  0.8676               84.7222%             \n",
+      "    61    33       136     4/4       100.0%  0.8862   8.9572      90.2778%       4.3478%\n",
+      "    61    34       140     4/4       100.0%  0.6309               86.1111%             \n",
+      "    64    35       144     4/4       100.0%  0.6341   9.1299      79.1667%       4.3478%\n",
+      "    65    36       148     4/4       100.0%  0.8081               80.5556%             \n",
+      "    67    37       152     4/4       100.0%  0.5212   5.2601      87.5000%       4.3478%\n",
+      "    68    38       156     4/4       100.0%  0.5258               88.8889%             \n",
+      "    71    39       160     4/4       100.0%  0.4202   6.8141      93.0556%      13.0435%\n",
+      "    72    40       164     4/4       100.0%  0.1828               94.4444%             \n",
+      "    74    41       168     4/4       100.0%  0.4811   9.1890      93.0556%      13.0435%\n",
+      "    75    42       172     4/4       100.0%  1.0974               97.2222%             \n",
+      "    77    43       176     4/4       100.0%  0.4021  10.3461      90.2778%      13.0435%\n",
+      "    78    44       180     4/4       100.0%  0.2821               95.8333%             \n",
+      "    81    45       184     4/4       100.0%  0.2166   8.7159      93.0556%       0.0000%\n",
+      "    82    46       188     4/4       100.0%  0.3437               93.0556%             \n",
+      "    84    47       192     4/4       100.0%  0.4628   8.5929      87.5000%       8.6957%\n",
+      "    85    48       196     4/4       100.0%  0.1000               98.6111%             \n",
+      "    88    49       200     4/4       100.0%  0.6345   6.8052      90.2778%       8.6957%\n",
       "Finished Training\n"
      ]
     }
@@ -480,65 +507,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 2, 2, 3, 3, 3, 3, 4, 4, 4, 4, 4, 4, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5]"
+       "23    3\n",
+       "22    3\n",
+       "1     3\n",
+       "2     3\n",
+       "3     3\n",
+       "4     3\n",
+       "5     3\n",
+       "6     3\n",
+       "7     3\n",
+       "8     3\n",
+       "9     3\n",
+       "10    3\n",
+       "11    3\n",
+       "12    3\n",
+       "13    3\n",
+       "14    3\n",
+       "15    3\n",
+       "16    3\n",
+       "17    3\n",
+       "18    3\n",
+       "19    3\n",
+       "20    3\n",
+       "21    3\n",
+       "0     3\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y = np.load(\"y_train.npy\")\n",
-    "sorted(pd.DataFrame(y.argmax(axis=1)).value_counts())"
+    "pd.DataFrame(np.load(\"y_train.npy\").argmax(axis=1)).value_counts()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[  0,   1,   2],\n",
-       "       [  5,   6,   7],\n",
-       "       [ 10,  11,  12],\n",
-       "       [ 15,  16,  17],\n",
-       "       [ 20,  21,  22],\n",
-       "       [ 25,  26,  27],\n",
-       "       [ 30,  31,  32],\n",
-       "       [ 35,  36,  37],\n",
-       "       [ 40,  41,  42],\n",
-       "       [ 45,  46,  47],\n",
-       "       [ 50,  51,  52],\n",
-       "       [ 55,  56,  57],\n",
-       "       [ 60,  61,  62],\n",
-       "       [ 65,  66,  67],\n",
-       "       [ 70,  71,  72],\n",
-       "       [ 75,  76,  77],\n",
-       "       [ 80,  81,  82],\n",
-       "       [ 85,  86,  87],\n",
-       "       [ 90,  91,  92],\n",
-       "       [ 95,  96,  97],\n",
-       "       [100, 101, 102],\n",
-       "       [105, 106, 107],\n",
-       "       [110, 111, 112],\n",
-       "       [115, 116, 117]])"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
